--- a/style.css
+++ b/style.css
@@ -1,19 +1,11 @@
-#map {
-  width: 100%;
-  height: 100vh;
-  background: gray;
+
+#mapid {
+  width: 80%;
+  height: 70vh;
 }
-/* .overlay {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  padding: 1em;
-  background: #FFF;
-  li {
-    margin: 1em 2em 1em .5em;
-    cursor: pointer;
-  }
+/* .container1{
+display: flex;
+justify-content: space-between;
+align-items:center ;
 } */
+
